[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "sarand"
dynamic = ["version"]
description = "Tool to extract the neighborhood of the target Antimicrobial Resistance (AMR) genes from the assembly graph."
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Somayeh Kafaie", email = "so.kafaie@gmail.com" },
]
keywords = [
    "Metagenomic Assembly graph",
    "Antimicrobial resistance",
    "Context extraction",
]
dependencies = [
    "networkx",
    "gfapy",
    "biopython",
    "pyrodigal"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/beiko-lab/sarand"
Repository = "https://github.com/beiko-lab/sarand"

[project.scripts]
sarand = "sarand.__main__:main"

[tool.setuptools.packages.find]
include = ["sarand*"]

[tool.setuptools.dynamic]
version = { attr = "sarand.__version__" }

[tool.setuptools.package-data]
sarand = ["data/*"]
